lab4/lab4-front-back/k8s/db-deploment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: lab4
  labels:
    app: mongodb-lab4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-lab4
  template:
    metadata:
      labels:
        app: mongodb-lab4
    spec:
      containers:
      - name: mongodb
        image: shlomobarzili/lab4-mongo:latest
        ports:
        - containerPort: 27017
