lab4/lab4-front-back/k8s/fronted.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: react-svc
  namespace: lab4 # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: react-app
  type: NodePort # the type of the service
  ports:
    - protocol: TCP
      port: 3000   # the port svc that expose
      targetPort: 3000 # the port of the pod
      nodePort: 30100 # the range of the ports is 30000-32767 | it's not necessary Unless you want to a specific port
                      # it's external port of the service . the access from outside the cluster
